#########################################################################
#									#
# Author: Copyright (C) 2025  Mark Grant				#
#									#
# Released under the GPLv3 only.					#
# SPDX-License-Identifier: GPL-3.0-only					#
#									#
# Purpose:								#
# AutoMake script file to generate bash-completion from source.		#
#									#
#########################################################################


if BASH_COMPLETION
include ./Makemodule.am
endif

